--- a/DrawGraphs/templates/plot.html
+++ b/DrawGraphs/templates/plot.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
-      google.charts.load('current', {'packages':['corechart']});
+      google.charts.load('49', {'packages':['corechart']});
       google.charts.setOnLoadCallback(drawChart);
       function createDataTable(strInput, sortOpts) {
         var data = google.visualization.arrayToDataTable(JSON.parse(strInput));
